--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   flappy_search_bar: 1.4.1
   dio: ^3.0.9
+  intl: ">=0.16.1"
+  flutter_dotenv: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -47,6 +49,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
