--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Flutter Web
+name: Fortnite Sweaty Gamerz Web
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
     
 runs-on: ubuntu-latest
         
-    steps:
+  steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
       with:
