--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,19 +17,19 @@ jobs:
           channel: 'beta' # Currently you have to use beta channel for Flutter web.
       - name: Upgrades flutter
         run: flutter upgrade
-        working-directory: ./example
+        working-directory: .
       - name: Enable Web
         run: flutter config --enable-web
-        working-directory: ./example
+        working-directory: .
       - name: Install dependencies
         run: flutter packages get
-        working-directory: ./example
+        working-directory: .
       - name: Build Web
         run: flutter build web
-        working-directory: ./example
+        working-directory: .
       - name: Deploy
         run: |
-          cd example/build/web
+          cd /build/web
           git init
           git config user.name  "CI"
           git config user.email "flutter-ci@github.com"
