--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flappy_search_bar: 1.4.1
+  font_awesome_flutter: ^8.8.1
   dio: ^3.0.9
   intl: ">=0.16.1"
 
