--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,6 +33,7 @@ jobs:
           git init
           git config --global user.name  "jawhnypoh"
           git config --global user.email "po.johnny@gmail.com"
+          git config --global init.defaultBranch master
           git status
           git remote add origin https://${{ secrets.ACCESS_TOKEN }}@github.com/jawhnypoh/fortnite_sweaty_gamerz.git
           git checkout -b gh-pages
