--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,45 +1,14 @@
-name: 'Deploy Flutter web app to github pages'
-description: 'Automates the build and deployment of your Flutter web app on Github gh pages'
-author: 'erickzanardo'
+name: Fortnite Sweaty Gamerz Web
 
-branding:
-  color: blue
-  icon: code
+on: [push]
 
-inputs:
-  useCanvasKit:
-    description: 'If the build should use skia (canvas kit) or not (default false)'
-    required: false
-    default: false
-  workingDir:
-    description: 'The directory where the project is (default .)'
-    required: false
-    default: .
-
-runs:
-  using: 'composite'
-  steps:
-    - run: flutter config --enable-web
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: flutter pub get
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: flutter build web --release --dart-define=FLUTTER_WEB_USE_SKIA=${{inputs.useCanvasKit}}
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: git config user.name github-actions
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: git config user.email github-actions@github.com
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: git --work-tree build/web add --all
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: git commit -m "Automatic deployment by github-actions"
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
-    - run: git push origin HEAD:gh-pages --force
-      shell: bash
-      working-directory: ${{inputs.workingDir}}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+        
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'beta'
+      - uses: erickzanardo/flutter-gh-pages@v2
